--- a/templates/index_basic.html
+++ b/templates/index_basic.html
@@ -12,15 +12,11 @@
 
     <body>
 
-        <h1>The XMLHttpRequest Object</h1>
+        <h1>Title here</h1>
 
-        <button type="button" onclick="loadDoc()">Get my CD collection</button>
+        <button type="button" onclick="loadDoc()">Get some data</button>
         <br><br>
-		<table id="demo"></table>
 		
-		<input type="text" class="form-control" id="id1" > <br>
-		<input type="text" id="id2" > <br>
-		<input type="submit" value="Submit">
 
         <script>
             function loadDoc() {
@@ -44,6 +40,8 @@
                 document.getElementById("demo").innerHTML = xmlDoc //"<h1>My First Heading</h1><p>My first paragraph.</p>";
             }
         </script>
+
+        <table id="demo"></table>
 
     </body>
 </html>
