--- a/templates/index_basic.html
+++ b/templates/index_basic.html
@@ -1,47 +1,111 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Bootstrap Example</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	  </head>
+<html lang="en">
 
-    <body>
+<head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+        .row.content {
+            height: 1500px
+        }
 
-        <h1>Title here</h1>
+        /* Set gray background color and 100% height */
+        .sidenav {
+            background-color: #f1f1f1;
+            height: 100%;
+        }
 
-        <button type="button" onclick="loadDoc()">Get some data</button>
-        <br><br>
-		
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 15px;
+        }
 
-        <script>
-            function loadDoc() {
-                var xhttp = new XMLHttpRequest();
-                xhttp.onreadystatechange = function () {
-                    if (this.readyState == 4 && this.status == 200) {
-                        myFunction(this);
-                    }
-                };
-                xhttp.open("POST", "_add_numbers", true);
-                xhttp.send();
+        /* On small screens, set height to 'auto' for sidenav and grid */
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 15px;
             }
-            function myFunction(xml) {
-                //var i;
-                var xmlDoc = xml.response;
-                //var table = "<tr><th>Artist</th><th>Title</th></tr>";
-                //var x = xmlDoc.getElementsByTagName("CD");
-                //for (i = 0; i < x.length; i++) {
-                //    table += "<tr><td>" + x[i].getElementsByTagName("ARTIST")[0].childNodes[0].nodeValue + "</td><td>" + x[i].getElementsByTagName("TITLE")[0].childNodes[0].nodeValue + "</td></tr>";
-                //}
-                document.getElementById("demo").innerHTML = xmlDoc //"<h1>My First Heading</h1><p>My first paragraph.</p>";
+
+            .row.content {
+                height: auto;
             }
-        </script>
+        }
+    </style>
 
-        <table id="demo"></table>
+    <script>
+        function loadDoc() {
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function () {
+                if (this.readyState == 4 && this.status == 200) {
+                    myFunction(this);
+                }
+            };
+            xhttp.open("POST", "_add_numbers", true);
+            xhttp.send();
+        }
+        function myFunction(xml) {
+            var xmlDoc = xml.response;
+            document.getElementById("flaskres").innerHTML = xmlDoc //"<h1>My First Heading</h1><p>My first paragraph.</p>";
+        }
+    </script>
 
-    </body>
+</head>
+
+<body>
+
+    <div class="container-fluid">
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <h4>G-Engine</h4>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="active"><a href="#section1">Dashboard</a></li>
+                    <li><a href="#section2">Influencer Search</a></li>
+                    <li><a href="#section3">Post Automator</a></li>
+
+                    <li><a href="dashboard">Old dashboard</a></li>
+
+                </ul><br>
+            </div>
+
+            <div class="col-sm-7">
+                <h4><small>Dashboard</small></h4>
+                <hr>
+
+                <div class="row">
+                    <div class="col-sm-3">
+                        <input class="form-control" type="text" placeholder="Username">
+                    </div>
+                    <div class="col-sm-3">
+                        <button type="button" class="btn" onclick="loadDoc()">Search</button>
+                    </div>
+                </div>
+
+                <div class="row" style="margin-top: 20px">
+                    <div class="col-sm-2">
+                        <p id="flaskres"></p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    </div>
+
+
+    <footer class="container-fluid">
+        <p>Footer Text</p>
+    </footer>
+
+</body>
+
 </html>
