--- a/templates/index.html
+++ b/templates/index.html
@@ -42,37 +42,22 @@
                 height: auto;
             }
         }
-        
-        .profilediv {
-            text-align: center;
-            display: inline-block;
-            padding: 2em 3em;
-            border: 1px solid lightgrey;
-            background: lightgreen;
-        }
-        
-        .profileimg {
-            display: block;
-            border-radius: 50%;
-            border: 3px solid transparent;
-            box-shadow: 0 0 0 5px red;
-        }
-        
-        .white {
-            border-color: white;
-        }
     </style>
 
     <script>
         function loadDoc() {
             var xhttp = new XMLHttpRequest();
+            var data = new FormData();
             xhttp.onreadystatechange = function() {
                 if (this.readyState == 4 && this.status == 200) {
                     myFunction(this);
                 }
             };
+
+            data.append("search_keyword", document.querySelector('#search_keyword').value)
             xhttp.open("POST", "search_backend", true);
-            xhttp.send();
+
+            xhttp.send(data);
         }
 
         function myFunction(xml) {
@@ -105,23 +90,25 @@
                     </li>
                 </ul><br>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm-10">
                 <h4>
                     <small>Dashboard</small>
                 </h4>
                 <hr>
 
                 <div class="row">
-                    <div class="col-sm-3">
-                        <input class="form-control" type="text" placeholder="Search in Bio">
 
-                    </div>
                     <div class="col-sm-3">
+                        <input class="form-control" type="text" placeholder="Search in Bio" id="search_keyword">
+                    </div>
+                    <div class="col-sm-5">
                         <button type="button" class="btn" onclick="loadDoc()">Search</button>
                     </div>
                 </div>
 
-                <div class="row" style="margin-top: 20px" id="flaskres"></div>
+                <div id="flaskres">
+                </div>
+
             </div>
         </div>
 
