--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,14 +2,15 @@
 <html>
 
 <head>
+    <title>Bootstrap Example</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-    <title>Cloud dashboard</title>
 
-    <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="./static/sidebar_style_new.css">
 
@@ -30,16 +31,31 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+
     </style>
+    <script>
+        function loadDoc(val) {
+            var xhttp = new XMLHttpRequest();
+            var data = new FormData();
+            xhttp.onreadystatechange = function () {
+                if (this.readyState == 4 && this.status == 200) {
+                    myFunction(this);
+                }
+            };
 
-</head>
+            data.append("search_keyword", document.querySelector('#search_keyword').value)
+            data.append("page", val)
+            xhttp.open("POST", "search_backend", true);
 
-<body>
+            xhttp.send(data);
+        }
 
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <!-- Bootstrap Js CDN -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        function myFunction(xml) {
+            var xmlDoc = xml.response;
+            document.getElementById("flaskres").innerHTML =
+                xmlDoc // "<h1>My First Heading</h1><p>My first paragraph.</p>";
+        }
+    </script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -49,7 +65,10 @@
         });
     </script>
 
-    
+</head>
+
+<body>
+
     <div class="wrapper">
         <!-- Sidebar Holder -->
         <nav id="sidebar">
@@ -59,7 +78,6 @@
             </div>
 
             <ul class="list-unstyled components">
-
                 <li>
                     <a href="#">
                         <i class="glyphicon glyphicon-wrench"></i> Station stats
@@ -77,56 +95,12 @@
                         <i class="glyphicon glyphicon-wrench"></i> New Dashboard
                     </a>
                 </li>
-                <!--
-                    <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
-                        <i class="glyphicon glyphicon-home"></i> Home
-                    </a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li><a href="#">P1</a></li>
-                        <li><a href="#">P2</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-briefcase"></i> About
-                    </a>
-
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
-                    <i class="glyphicon glyphicon-duplicate"></i>
-                    Pages
-                </a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
-                </ul>
-
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-link"></i> Portfolio
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-paperclip"></i> FAQ
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-send"></i> Contact
-                    </a>
-                </li>
-
-                !-->
-
             </ul>
         </nav>
 
         <!-- Page Content Holder -->
 
-        {% include 'content_aster.html' %}
+        {% include 'content_dashboard.html' %}
 
     </div>
 
