before dev job on 6.1.2020

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8 animate-box">
-                        <h2>Contact Information</h2>
+                        <!--<h2>Live Chat</h2>-->
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="contact-info-wrap-flex">
@@ -75,16 +75,15 @@
 									<div class="con-info">
 										<p><span><i class="icon-mail"></i></span> <a href="mailto:contact@qlines.net">contact@qlines.net</a></p>
 									</div>
-								    -->
+								    
                                     <div class="con-info">
-                                        <p><span><i class="icon-globe"></i></span> <a href="#">www.fluence24.com</a></p>
-                                    </div>
+                                        <p><span><i class="icon-globe"></i></span> <a href="contact">Start the live chat</a></p>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 animate-box">
-                        <p style="padding-top: 20px;padding-bottom: 20px;color: rgb(15, 154, 15)">{{result}}</p>
                         <h2>Get In Touch</h2>
                         <form action="{{ url_for('contact') }}" method="post">
                             <div class="row form-group">
