--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,12 +7,13 @@
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
+								<li><a href="/">Home</a></li>
 
-								<li><a href="jobs">Try</a></li>
+								<li><a href="dashboard">Try</a></li>
 
-								<li><a href="jobs">Features</a></li>
+								<li><a href="features">Features</a></li>
 
-								<li><a href="contact">Pricing</a></li>
+								<li><a href="pricing">Pricing</a></li>
 
 								<li><a href="contact">Contact</a></li>
 
