basic flask login built and working

--- a/templates/dashboard_home.html
+++ b/templates/dashboard_home.html
@@ -1,5 +1,5 @@
 <style>
-  .logout-nav{
+  .logout-nav {
     position: absolute;
     right: 10px;
     top: 6px;
@@ -16,12 +16,10 @@
           <i class="glyphicon glyphicon-align-left"></i>
           <span></span>
         </button>
-        <button type="button" class="btn btn-info logout-nav">
+        <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
           Log out
         </button>
       </div>
-
-
 
     </div>
   </nav>
