--- a/templates/nav.html
+++ b/templates/nav.html
@@ -17,7 +17,7 @@
 
 								<li><a href="contact">Contact</a></li>
 
-								<li><a href="login">Log In</a></li>
+								<li><a href="dashboard">Sign In</a></li>
 
 								<li><a href="signup">Sign Up</a></li>
 							</ul>
