--- a/templates/confirm_registration.html
+++ b/templates/confirm_registration.html
@@ -30,39 +30,9 @@
               <div class="brand-logo">
                 <img src="static/login_assets/images/logo.svg">
               </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="font-weight-light">Sign in to continue.</h6>
-              <form method="post">
-                <div class="form-group">
-                  <input name="email_holder" type="text" class="form-control form-control-lg" id="exampleInputEmail1"
-                    placeholder="Username">
-                </div>
-                <div class="form-group">
-                  <input name="password_holder" type="password" class="form-control form-control-lg"
-                    id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="mt-3">
-                  <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn"
-                    type="submit">SIGN IN</button>
-                </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input name="keepsignedin_holder" type="checkbox" class="form-check-input"> Keep me signed in
-                    </label>
-                  </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
-                <!--
-                  <div class="mb-2">
-                    <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                      <i class="mdi mdi-facebook mr-2"></i>Connect using facebook </button>
-                  </div>
-                  -->
-                <div class="text-center mt-4 font-weight-light"> Don't have an account? <a href="register.html"
-                    class="text-primary">Create</a>
-                </div>
-              </form>
+              <h4>Please check your email inbox. We need your confirmation to go forward :)</h4>
+              <a href="/login" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SIGN
+                IN</a>
             </div>
           </div>
         </div>
