--- a/templates/signup.html
+++ b/templates/signup.html
@@ -32,13 +32,13 @@
                 <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
                 <form class="pt-3" method="post">
                   <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                    <input name="username" type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
                   </div>
                   <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                    <input name="email" type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
                   </div>
                   <div class="form-group">
-                    <select class="form-control form-control-lg" id="exampleFormControlSelect2">
+                    <select name="country" class="form-control form-control-lg" id="exampleFormControlSelect2">
                       <option>Country</option>
                       <option>United States of America</option>
                       <option>United Kingdom</option>
@@ -48,12 +48,12 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                    <input name="password" type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
                   </div>
                   <div class="mb-4">
                     <div class="form-check">
                       <label class="form-check-label text-muted">
-                        <input type="checkbox" class="form-check-input"> I agree to all Terms & Conditions </label>
+                        <input name="agreeterms" type="checkbox" class="form-check-input"> I agree to all Terms & Conditions </label>
                     </div>
                   </div>
                   <div class="mt-3">
