--- a/static/css/style.css
+++ b/static/css/style.css
@@ -382,7 +382,7 @@ figure {
     background: -ms-linear-gradient(-45deg, #499bea 0%, #798eea 100%);
     background: -webkit-linear-gradient(315deg, #499bea 0%, #798eea 100%);
     background: -o-linear-gradient(315deg, #499bea 0%, #798eea 100%);
-    background: linear-gradient(135deg, #549a6e 0%, #798eea 100%);
+    background: linear-gradient(135deg, rgb(65,79,101) 0%, rgb(65,79,101) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#798eea', GradientType=1);
     z-index: 1;
 }
