--- a/templates/contact.html
+++ b/templates/contact.html
@@ -84,6 +84,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 animate-box">
+                        <p style="padding-top: 20px;padding-bottom: 20px">{{result}}</p>
                         <h2>Get In Touch</h2>
                         <form action="{{ url_for('contact') }}" method="post">
                             <div class="row form-group">
