--- a/templates/login.html
+++ b/templates/login.html
@@ -2,86 +2,82 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Purple Admin</title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <!-- endinject -->
-  <!-- Layout styles -->
-  <link rel="stylesheet" href="static/login_assets/css/style.css">
-  <!-- End layout styles -->
-  <link rel="shortcut icon" href="static/login_assets/images/favicon.png" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Purple Admin</title>
+    <!-- plugins:css -->
+    <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <!-- endinject -->
+    <!-- Layout styles -->
+    <link rel="stylesheet" href="static/login_assets/css/style.css">
+    <!-- End layout styles -->
+    <link rel="shortcut icon" href="static/login_assets/images/favicon.png" />
 </head>
 
 <body>
-  <div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-      <div class="content-wrapper d-flex align-items-center auth">
-        <div class="row flex-grow">
-          <div class="col-lg-4 mx-auto">
-            <div class="auth-form-light text-left p-5">
-              <div class="brand-logo">
-                <img src="static/login_assets/images/logo.svg">
-              </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="font-weight-light">Sign in to continue.</h6>
-              <form method="post">
-                <div class="form-group">
-                  <input name="email_holder" type="text" class="form-control form-control-lg" id="exampleInputEmail1"
-                    placeholder="Username">
-                </div>
-                <div class="form-group">
-                  <input name="password_holder" type="password" class="form-control form-control-lg"
-                    id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="mt-3">
-                  <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn"
-                    type="submit">SIGN IN</button>
-                </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
+    <div class="container-scroller">
+        <div class="container-fluid page-body-wrapper full-page-wrapper">
+            <div class="content-wrapper d-flex align-items-center auth">
+                <div class="row flex-grow">
+                    <div class="col-lg-4 mx-auto">
+                        <div class="auth-form-light text-left p-5">
+                            <div class="brand-logo">
+                                <img src="static/login_assets/images/logo.svg">
+                            </div>
+                            <h4>Hello! let's get started</h4>
+                            <h6 class="font-weight-light">Sign in to continue.</h6>
+                            <form method="post">
+                                <div class="form-group">
+                                    <input name="email_holder" type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
+                                </div>
+                                <div class="form-group">
+                                    <input name="password_holder" type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                                </div>
+                                <div class="mt-3">
+                                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN IN</button>
+                                </div>
+                                <div class="my-2 d-flex justify-content-between align-items-center">
+                                    <div class="form-check">
+                                        <label class="form-check-label text-muted">
                       <input name="keepsignedin_holder" type="checkbox" class="form-check-input"> Keep me signed in
                     </label>
-                  </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
-                <!--
+                                    </div>
+                                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                                </div>
+                                <!--
                   <div class="mb-2">
                     <button type="button" class="btn btn-block btn-facebook auth-form-btn">
                       <i class="mdi mdi-facebook mr-2"></i>Connect using facebook </button>
                   </div>
                   -->
-                <div class="text-center mt-4 font-weight-light"> Don't have an account? <a href="register.html"
-                    class="text-primary">Create</a>
+                                <div class="text-center mt-4 font-weight-light"> Don't have an account? <a href="signup" class="text-primary">Create</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-              </form>
             </div>
-          </div>
+            <!-- content-wrapper ends -->
         </div>
-      </div>
-      <!-- content-wrapper ends -->
+        <!-- page-body-wrapper ends -->
     </div>
-    <!-- page-body-wrapper ends -->
-  </div>
-  <!-- container-scroller -->
-  <!-- plugins:js -->
-  <script src="static/login_assets/vendors/js/vendor.bundle.base.js"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script src="static/login_assets/js/off-canvas.js"></script>
-  <script src="static/login_assets/js/hoverable-collapse.js"></script>
-  <script src="static/login_assets/js/misc.js"></script>
-  <!-- endinject -->
+    <!-- container-scroller -->
+    <!-- plugins:js -->
+    <script src="static/login_assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="static/login_assets/js/off-canvas.js"></script>
+    <script src="static/login_assets/js/hoverable-collapse.js"></script>
+    <script src="static/login_assets/js/misc.js"></script>
+    <!-- endinject -->
 </body>
 
 </html>
