login form text update

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Purple Admin</title>
+    <title>Q-Lines Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
@@ -27,10 +27,8 @@
                 <div class="row flex-grow">
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-left p-5">
-                            <div class="brand-logo">
-                                <img src="static/login_assets/images/logo.svg">
-                            </div>
-                            <h4>Hello! let's get started</h4>
+
+                            <h4>Q-Lines Dashboard</h4>
                             <h6 class="font-weight-light">Sign in to continue.</h6>
                             <form method="post">
                                 <div class="form-group">
