change admin name

--- a/templates/ml_mashin-panel.html
+++ b/templates/ml_mashin-panel.html
@@ -62,7 +62,7 @@
             </div>
             <div class="profile-details">
                 <!--<img src="images/profile.jpg" alt="">-->
-                <span class="admin_name">Mehdi Abolfathi</span>
+                <span class="admin_name">user1</span>
 
             </div>
         </nav>
