--- a/templates/ml_sms-panel.html
+++ b/templates/ml_sms-panel.html
@@ -51,21 +51,9 @@
         </ul>
     </div>
     <section class="home-section">
-        <nav>
-            <div class="sidebar-button">
-                <i class='bx bx-menu sidebarBtn'></i>
-                <span class="dashboard">Dashboard</span>
-            </div>
-            <div class="search-box">
-                <input type="text" placeholder="Search...">
-                <i class='bx bx-search'></i>
-            </div>
-            <div class="profile-details">
-                <!--<img src="images/profile.jpg" alt="">-->
-                <span class="admin_name">user1</span>
 
-            </div>
-        </nav>
+        {% include 'ml_header.html' %}
+
         <div class="home-content">
             <div class="overview-boxes">
                 <div class="box">
