--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,58 +18,69 @@
     <link rel="stylesheet" href="static/login_assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="static/login_assets/images/favicon.png" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container-scroller">
-      <div class="container-fluid page-body-wrapper full-page-wrapper">
-        <div class="content-wrapper d-flex align-items-center auth">
-          <div class="row flex-grow">
-            <div class="col-lg-4 mx-auto">
-              <div class="auth-form-light text-left p-5">
-                <div class="brand-logo">
-                  <img src="static/login_assets/images/logo.svg">
-                </div>
-                <h4>New here?</h4>
-                <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-                <form class="pt-3" method="post">
-                  <div class="form-group">
-                    <input name="username" type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
-                  </div>
-                  <div class="form-group">
-                    <input name="email" type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
-                  </div>
-                  <div class="form-group">
-                    <select name="country" class="form-control form-control-lg" id="exampleFormControlSelect2">
-                      <option>Country</option>
-                      <option>United States of America</option>
-                      <option>United Kingdom</option>
-                      <option>India</option>
-                      <option>Germany</option>
-                      <option>Argentina</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <input name="password" type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-                  </div>
-                  <div class="mb-4">
-                    <div class="form-check">
-                      <label class="form-check-label text-muted">
-                        <input name="agreeterms" type="checkbox" class="form-check-input"> I agree to all Terms & Conditions </label>
+        <div class="container-fluid page-body-wrapper full-page-wrapper">
+            <div class="content-wrapper d-flex align-items-center auth">
+                <div class="row flex-grow">
+                    <div class="col-lg-4 mx-auto">
+                        <div class="auth-form-light text-left p-5">
+                            <div class="brand-logo">
+                                <img src="static/login_assets/images/logo.svg">
+                            </div>
+                            <h4>New here?</h4>
+                            <h6 class="font-weight-light">{{message}}</h6>
+                            <form class="pt-3" method="post">
+
+                                <!--<div class="form-group">
+                                    <input name="username" type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                                </div>-->
+
+                                <div class="form-group">
+                                    <input name="email" type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                                </div>
+                                <!-- <div class="form-group">
+                                    <select name="country" class="form-control form-control-lg" id="exampleFormControlSelect2">
+                                            <option>Country</option>
+                                            <option>United States of America</option>
+                                            <option>Netherlands</option>
+                                            <option>United Kingdom</option>
+                                            <option>India</option>
+                                            <option>Germany</option>
+                                            <option>Others</option>
+                                        </select>
+                                </div>-->
+                                <div class="form-group">
+                                    <input name="password_main" type="password" class="form-control form-control-lg" id="password_main" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <input name="password_confirm" type="password" class="form-control form-control-lg" id="password_confirm" placeholder="Confirm Password">
+                                </div>
+                                <div class="mb-4">
+                                    <div class="form-check">
+                                        <label class="form-check-label text-muted">
+                                                <input name="agreeterms" type="checkbox" class="form-check-input">
+                                                I agree to all Terms & Conditions
+                                            </label>
+                                    </div>
+                                </div>
+                                <div class="mt-3">
+                                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN UP</button>
+                                </div>
+                                <div class="text-center mt-4 font-weight-light">
+                                    Already have an account?
+                                    <a href="login" class="text-primary">Login</a>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                  </div>
-                  <div class="mt-3">
-                    <button class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" type="submit">SIGN UP</button>
-                  </div>
-                  <div class="text-center mt-4 font-weight-light"> Already have an account? <a href="login" class="text-primary">Login</a>
-                  </div>
-                </form>
-              </div>
+                </div>
             </div>
-          </div>
+            <!-- content-wrapper ends -->
         </div>
-        <!-- content-wrapper ends -->
-      </div>
-      <!-- page-body-wrapper ends -->
+        <!-- page-body-wrapper ends -->
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
@@ -77,9 +89,11 @@
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="static/login_assets/js/off-canvas.js"></script>
+    <script src="static/login_assets/js/off-canvas.js">
+    </script>
     <script src="static/login_assets/js/hoverable-collapse.js"></script>
     <script src="static/login_assets/js/misc.js"></script>
     <!-- endinject -->
-  </body>
+</body>
+
 </html>
