footer text fix

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
                 <h4>About Q-LINES</h4>
-                <p>With more than 10 years of experience in cloud computing, remote management and network integration, PANORAMA24 provides the reliable and high-available network services to smooth out the remote device managements.</p>
+                <p>With more than 10 years of experience in cloud computing, remote management and network integration, we provide the reliable and high-available network services to smooth out the remote device managements.</p>
                 <p>
                     <ul class="colorlib-social-icons">
                         <li><a href="#"><i class="icon-twitter"></i></a></li>
