update from nov 18

--- a/templates/dashboard_home.html
+++ b/templates/dashboard_home.html
@@ -111,11 +111,7 @@
         -->
 
         
-
-        <div>{% include 'test_simple_barchart1.html' %}</div>
-        <div>{% include 'test_simple_linechart1.html' %}</div>
-
-
+        <div>{% include 'test_mychart.html' %}</div>
 
     </div>
 
