--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,15 +5,24 @@
     <title>QLines - dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="static/sidebar_style_new.css">
 
     <style>
+        /*
         footer {
             background-color: #555;
             color: white;
@@ -36,8 +45,10 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+        */
     </style>
     <script>
+        /*
         function loadDoc(val) {
             var xhttp = new XMLHttpRequest();
             var data = new FormData();
@@ -59,6 +70,7 @@
             document.getElementById("flaskres").innerHTML =
                 xmlDoc // "<h1>My First Heading</h1><p>My first paragraph.</p>";
         }
+        */
     </script>
 
     <script type="text/javascript">
@@ -72,13 +84,13 @@
 </head>
 
 <body>
+
     <div class="wrapper">
         <!-- Sidebar Holder -->
         {% include 'sidebar.html' %}
 
         <!-- Page Content Holder -->
         {% include 'dashboard_home.html' %}
-
     </div>
 
     <footer class="container-fluid">
